# schema-crosswalk

./: .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml
datasets/: README.md
datasets/customers/: expected.jsonl  mapping.json  source.csv  target_schema.json
docs/: design.md
src/schema_crosswalk/: __init__.py  cache.py  cli.py  crosswalk.py  execute.py  fingerprint.py  models.py  profile.py  propose.py  review.py  validate.py
src/schema_crosswalk/backends/: __init__.py  anthropic.py  openai.py  outlines.py  xgrammar.py
src/schema_crosswalk/execute/: __init__.py  coerce.py  engine.py  guard.py  primitives.py  runtime.py
src/schema_crosswalk/grammar/: __init__.py
src/schema_crosswalk/grammar/v1/: manifest.json  rule.json
src/schema_crosswalk/grammar/v1/params/: arithmetic.json  cast_type.json  coalesce.json  concat_fields.json  default_value.json  map_enum_value.json  nested_extract.json  nested_flatten.json  normalize_string.json  rename_field.json  split_field.json
tests/: test_backend_anthropic.py  test_cli.py  test_execute.py  test_fingerprint.py  test_golden.py  test_grammar_schemas.py  test_import_boundary.py  test_models.py  test_profile.py  test_propose.py  test_validate.py
